# hazardous_finishes

./: .gitignore  INSTALL.md  ISSUES_RESOLVED.md  README.md  SFT_SCHEMA_UPDATE.md  hazard-cli  pyproject.toml  test_installation.sh  test_system.sh  test_typer.py
app/: __init__.py  cli.py  cli_typer.py
app/services/: __init__.py  query.py
data/inputs/: LMA-PJ100.rtf  SFT_regex.py  finish_applied.csv  finish_codes.csv  finish_codes.csv.backup  finish_codes_parser.py  sft_steps.csv  sft_steps.csv.backup_before_enrichment  spec_types.csv  substrates.csv
db/: schema.sql
docs/: README_architecture.md  schema_overview.md
etl/: __init__.py  hashing.py  load_csvs.py  validators.py
init/: SCOPE.md  TODO.md
scripts/: enrich_specs_with_types.py  fix_finish_codes_csv.py
tests/: __init__.py
tests/fixtures/: README.md  chemicals.csv  finish_applied.csv  finish_code_steps.csv  finish_codes.csv  material_chemicals.csv  materials_map.csv  sft_material_links.csv  sft_steps.csv  substrates.csv
